kubernetes/overlays/local/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: sweetrpg-library-web

spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/library`)
      kind: Rule
      services:
        - name: sweetrpg-library-web
          port: 8280
